--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "@testing-library/user-event": "^13.5.0"
   },
   "peerDependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
-    "@mui/material": "^6.1.1"
+    "@mui/icons-material": "^6.1.1",
+    "@mui/material": "^6.1.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -48,16 +49,19 @@
     "@babel/core": "^7.25.2",
     "@babel/preset-env": "^7.25.4",
     "@babel/preset-react": "^7.24.7",
-    "babel-loader": "^9.2.1",
-    "webpack": "^5.94.0",
-    "webpack-cli": "^5.1.4",
-    "web-vitals": "^2.1.4",
-    "react-scripts": "5.0.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
-    "@mui/material": "^6.1.1"
+    "@mui/icons-material": "^6.1.1",
+    "@mui/material": "^6.1.1",
+    "babel-loader": "^9.2.1",
+    "css-loader": "^7.1.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-scripts": "5.0.1",
+    "style-loader": "^4.0.0",
+    "web-vitals": "^2.1.4",
+    "webpack": "^5.94.0",
+    "webpack-cli": "^5.1.4"
   },
   "repository": {
     "type": "git",
